--- a/mysite/semaphore/static/admin_page.css
+++ b/mysite/semaphore/static/admin_page.css
@@ -9,6 +9,21 @@ h1{
     color: black;
 }
 
+.button {
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.btnready {background-color: green;}
+.btnbusy{background-color: red;}
+
 .dot {
     height: 100px;
     width: 100px;
